# neural-sparse-cpp

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  DEVELOPER_GUIDE.md  MAINTAINERS.md  README.md
.github/: CODEOWNERS
.github/actions/check-files/: action.yml
.github/workflows/: CI.yml
benchmarks/: CMakeLists.txt  index_build_benchmark.cpp  index_search_benchmark.cpp  ranker_benchmark.cpp
cmake/: cuda.cmake  third_party.cmake
demos/: seismic_sq.py  seismic_sq_idmap.py  seismic_sq_idmap_idselector.py
jni/: CMakeLists.txt  nsparse_jni.cpp
nsparse/: CMakeLists.txt  brutal_index.cpp  brutal_index.h  exact_matcher.h  id_map_index.cpp  id_map_index.h  id_selector.h  index.cpp  index.h  index_factory.cpp  index_factory.h  inverted_index.cpp  inverted_index.h  seismic_common.cpp  seismic_common.h  seismic_index.cpp  seismic_index.h  seismic_scalar_quantized_index.cpp  seismic_scalar_quantized_index.h  sparse_vectors.cpp  sparse_vectors.h  types.h
nsparse/cluster/: inverted_list_clusters.cpp  inverted_list_clusters.h  kmeans_utils.cpp  kmeans_utils.h  random_kmeans.cpp  random_kmeans.h
nsparse/gpu/: CMakeLists.txt  gpu_cluster_assigner.cu  gpu_cluster_assigner.h  gpu_common.cuh  gpu_summarizer.cu  gpu_summarizer.h
nsparse/invlists/: inverted_lists.cpp  inverted_lists.h
nsparse/io/: buffered_io.cpp  buffered_io.h  file_io.cpp  file_io.h  index_io.cpp  index_io.h  io.h  seismic_invlists_writer.h
nsparse/python/: CMakeLists.txt  __init__.py  class_wrappers.py  loader.py  nsparse_typemaps.i  pyproject.toml  setup.py  swignsparse_avx2.swig
nsparse/utils/: checks.h  dense_vector_matrix.h  distance.h  distance_avx2.h  distance_avx512.h  distance_neon.h  distance_simd.h  distance_sve.h  hugepage.h  prefetch.h  ranker.h  scalar_quantizer.h  vector_process.h  visited_set.h
tests/: CMakeLists.txt  distance_test.cpp  exact_matcher_test.cpp  gpu_cluster_assigner_test.cpp  id_map_index_test.cpp  id_selector_test.cpp  index_factory_test.cpp  index_io_test.cpp  inverted_index_recall_test.cpp  inverted_index_test.cpp  inverted_list_clusters_test.cpp  inverted_lists_test.cpp  kmeans_utils_test.cpp  prefetch_test.cpp  random_kmeans_test.cpp  ranker_test.cpp  scalar_quantizer_test.cpp  seismic_common_test.cpp  seismic_index_test.cpp  seismic_invlists_writer_test.cpp  seismic_scalar_quantized_index_test.cpp  sparse_vectors_test.cpp  vector_process_test.cpp
